fix(3187136947): align Account menu to Figma design (#312)
Align the Account menu to the Figma design 

Solves #[3187136947](https://starkware.monday.com/boards/2891230138/pulses/3187136947)

--- a/src/components/Features/Source/Source.module.scss
+++ b/src/components/Features/Source/Source.module.scss
@@ -2,6 +2,7 @@
 
 .source {
   transition: 0.3s ease-in-out;
+  width: 432px;
 
   .tabsContainer {
     display: flex;
