--- a/src/routes/Bridge/Bridge.module.scss
+++ b/src/routes/Bridge/Bridge.module.scss
@@ -17,6 +17,7 @@
     border-radius: 16px;
     padding: 16px;
     width: 432px;
+    min-width: max-content;
     max-height: 650px;
     margin: auto;
     transition: 0.3s ease-in-out;
